objects/Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Expected_Contractual_Prime__c</fullName>
        <description>Expected Contractual Prime</description>
        <inlineHelpText>Who will be expected to prime the deal</inlineHelpText>
        <label>Expected Contractual Prime</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_discounts__c</fullName>
        <label>Expected Discounts (Pricing Model)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_infrastructure_asset_location__c</fullName>
        <label>Expected Infrastructure Asset Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SP Partner</fullName>
                </value>
                <value>
                    <fullName>Delivery partner</fullName>
                </value>
                <value>
                    <fullName>Cisco hosted</fullName>
                </value>
                <value>
                    <fullName>End customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_invoicing__c</fullName>
        <description>Expected invoicing Cisco to customer .</description>
        <label>Expected Invoicing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Centrally to customer</fullName>
                </value>
                <value>
                    <fullName>Local in-country</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Focus_Pursuit__c</fullName>
        <description>Focus Pursuit</description>
        <inlineHelpText>For more information please refer to Delivery Model Guide: 

http://tools.cisco.com/squish/9ffB7</inlineHelpText>
        <label>Focus Pursuit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Amt_Required_000__c</fullName>
        <label>Funding Amt  Required ($000)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Stage_Level__c</fullName>
        <label>Funding Stage Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Global Cisco Funnel</fullName>
                </value>
                <value>
                    <fullName>2 - Geo Prioritization</fullName>
                </value>
                <value>
                    <fullName>3 - Sales Prioritization</fullName>
                </value>
                <value>
                    <fullName>4 - Execution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type_Required__c</fullName>
        <label>Funding Type Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debt</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Debt &amp; Equity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSPO_Joint_Business_Status__c</fullName>
        <description>Field stores GSPO Joint Business Status</description>
        <label>GSPO Joint Business Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSPO_Partner_Opportunity_ID__c</fullName>
        <description>Field stores GSPO Partner Opportunity ID</description>
        <label>GSPO Partner Opportunity ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GSPO_Partner_Opportunity_Status__c</fullName>
        <description>Field stores GSPO Partner Opportunity Status</description>
        <label>GSPO Partner Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSPO_Qualification_Source__c</fullName>
        <description>This field stores the values of GSPO Qualification source.</description>
        <label>GSPO Qualification Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cisco Submitted</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>GSPO Partner Submitted</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Submitted</fullName>
                </value>
                <value>
                    <fullName>PSS Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSPO_Record_Status__c</fullName>
        <label>GSPO Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Assign Opportunity</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Not Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTM_Architecture__c</fullName>
        <label>GSPO GTM Architecture</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BYOD/MDM</fullName>
                </value>
                <value>
                    <fullName>Collab</fullName>
                </value>
                <value>
                    <fullName>Comm</fullName>
                </value>
                <value>
                    <fullName>DCV</fullName>
                </value>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>E-Pod</fullName>
                </value>
                <value>
                    <fullName>FlexPod Mini</fullName>
                </value>
                <value>
                    <fullName>FlexProd Expres</fullName>
                </value>
                <value>
                    <fullName>Hybrid 2k</fullName>
                </value>
                <value>
                    <fullName>Hybrid 3k</fullName>
                </value>
                <value>
                    <fullName>Hybrid 6k</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gate_0_Approval_Date__c</fullName>
        <label>Gate 0 Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_0_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Gate 0 Approver</description>
        <label>Gate 0 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Qualifications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gate_0_Comments__c</fullName>
        <label>Gate 0 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gate_0_Requested_Review_Date__c</fullName>
        <label>Gate 0 Requested Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_0_Review_Result__c</fullName>
        <label>Gate 0 Review Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gate_1_Approval_Date__c</fullName>
        <label>Gate 1 Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_1_Approved__c</fullName>
        <label>Gate 1 Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gate_2_Approval_Date__c</fullName>
        <label>Gate 2 Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_2_Approved__c</fullName>
        <label>Gate 2 Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gate_3_Comments__c</fullName>
        <label>Gate 3 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gate_3_Review_Date__c</fullName>
        <label>Gate 3 Requested Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_3_Review_Result__c</fullName>
        <label>Gate 3 Review Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Infrastructure_Funds_Lead__c</fullName>
        <label>Global Infrastructure Funds Lead</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Go_to_Market_Investment_000__c</fullName>
        <label>Go to Market Investment ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Government_Affairs_Relationship__c</fullName>
        <label>Government Affairs Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hardware_Booking_Split_A_TCCV__c</fullName>
        <description>Hardware Booking Split (A-TCCV) ($000)</description>
        <label>Hardware Booking Split (A-TCCV) ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardware_Booking_Split_TCCV_000__c</fullName>
        <description>Hardware Booking Split (TCCV)</description>
        <label>Hardware Booking Split (TCCV) ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardware_Booking_Split__c</fullName>
        <description>Hardware  Revenue Split %</description>
        <label>Hardware Booking Split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ITaaB_BDM__c</fullName>
        <description>ITaaB BDM</description>
        <label>ITaaB BDM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_with_CRMDB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrated with CRMDB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LE_Deal_Overview__c</fullName>
        <description>LE Deal Overview</description>
        <label>LE Deal Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LE_Expected_Book_Date__c</fullName>
        <description>LE Expected Book Date</description>
        <label>LE Expected Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LE_Next_Steps__c</fullName>
        <description>LE Next Steps</description>
        <label>LE Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LE_Probability_to_Close__c</fullName>
        <description>LE Probability to Close</description>
        <label>LE Probability to Close %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Architect__c</fullName>
        <label>Lead Architect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Expected_Close_Date__c</fullName>
        <label>GSPO Lead Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Pursuit_Org__c</fullName>
        <description>Lead Pursuit Org</description>
        <label>Lead Pursuit Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APJ SET</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>EMEAR LCD</fullName>
                </value>
                <value>
                    <fullName>GES SET</fullName>
                </value>
                <value>
                    <fullName>GSP LCD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA_with_customer__c</fullName>
        <description>CMS BDM</description>
        <label>CMS BDM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Adjacency__c</fullName>
        <label>Market Adjacency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Advertising Exchange</fullName>
                </value>
                <value>
                    <fullName>Borderless Networks</fullName>
                </value>
                <value>
                    <fullName>Cloud/XaaS</fullName>
                </value>
                <value>
                    <fullName>Collaboration (UC/WebEx/TP)</fullName>
                </value>
                <value>
                    <fullName>IP-NGN 2.0</fullName>
                </value>
                <value>
                    <fullName>(IRIS) Routers in Space</fullName>
                </value>
                <value>
                    <fullName>Managed Services Incubation</fullName>
                </value>
                <value>
                    <fullName>Media Solutions</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Safety &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Smart &amp; Connected Communities</fullName>
                </value>
                <value>
                    <fullName>Smart Grid</fullName>
                </value>
                <value>
                    <fullName>Solutions/New Business Models</fullName>
                </value>
                <value>
                    <fullName>SP Managed Services/Data Center</fullName>
                </value>
                <value>
                    <fullName>Sports &amp; Entertainment</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Virtual Healthcare</fullName>
                </value>
                <value>
                    <fullName>Virtualization/Data Center</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>China 3.0</fullName>
                </value>
                <value>
                    <fullName>India 3.0</fullName>
                </value>
                <value>
                    <fullName>Mexico 3.0</fullName>
                </value>
                <value>
                    <fullName>Brasil / Russia / Saudi Arabia Strategy</fullName>
                </value>
                <value>
                    <fullName>Cisco 3.0</fullName>
                </value>
                <value>
                    <fullName>Command / Control</fullName>
                </value>
                <value>
                    <fullName>Globalisation</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_DealId__c</fullName>
        <description>Change Request Qualification must add the Master Deal ID that belongs to the Deal that CR requested.</description>
        <inlineHelpText>Change Request Qualification must add the Master Deal ID that belongs to the Deal that CR requested.</inlineHelpText>
        <label>Master Deal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McKinsey_Mapping__c</fullName>
        <description>McKinsey Mapping</description>
        <label>McKinsey Mapping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RIM-Traditional</fullName>
                </value>
                <value>
                    <fullName>RIM-Automated</fullName>
                </value>
                <value>
                    <fullName>RIM-Emerging Products</fullName>
                </value>
                <value>
                    <fullName>Cloud-Traditional</fullName>
                </value>
                <value>
                    <fullName>Cloud-Automated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Exec_Summary_Next_Step_s__c</fullName>
        <description>Monthly Exec Summary Next Step(s)</description>
        <label>Monthly Exec Summary Next Step(s)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Monthly_Exec_Summary_Notes__c</fullName>
        <label>Monthly Exec Summary Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NBM_Offer_Type__c</fullName>
        <description>Pursuit Solution</description>
        <label>Pursuit Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>CCaaS</fullName>
                </value>
                <value>
                    <fullName>CloudaaS</fullName>
                </value>
                <value>
                    <fullName>DC Infra</fullName>
                </value>
                <value>
                    <fullName>DC Solutions</fullName>
                </value>
                <value>
                    <fullName>DCaaS</fullName>
                </value>
                <value>
                    <fullName>HCSaaS</fullName>
                </value>
                <value>
                    <fullName>Hybrid-Cloud</fullName>
                </value>
                <value>
                    <fullName>Integrated Managed Services</fullName>
                </value>
                <value>
                    <fullName>Managed APM</fullName>
                </value>
                <value>
                    <fullName>Managed ATA-Essential</fullName>
                </value>
                <value>
                    <fullName>Managed ATA-Premier</fullName>
                </value>
                <value>
                    <fullName>Managed Cloud Center</fullName>
                </value>
                <value>
                    <fullName>Managed Customer Care</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise IOT</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise IWAN</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Meraki</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Mobility</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Optical</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise R&amp;S</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise WiFi</fullName>
                </value>
                <value>
                    <fullName>Managed HCS</fullName>
                </value>
                <value>
                    <fullName>Managed Mercury</fullName>
                </value>
                <value>
                    <fullName>Managed Network Services Orchestration (NSO)</fullName>
                </value>
                <value>
                    <fullName>Managed SD-Access</fullName>
                </value>
                <value>
                    <fullName>Managed UC</fullName>
                </value>
                <value>
                    <fullName>Managed UCSD</fullName>
                </value>
                <value>
                    <fullName>Managed vBranch</fullName>
                </value>
                <value>
                    <fullName>Managed Video</fullName>
                    <label>Managed VIdeo</label>
                </value>
                <value>
                    <fullName>Managed Viptela</fullName>
                    <label>managed viptela</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NBM_SAO_Core_Team__c</fullName>
        <defaultValue>"nbm-review_core-team@cisco.com"</defaultValue>
        <label>NBM SAO Core Team</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NBM_Theater_Lead__c</fullName>
        <label>NBM Theater Lead</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Next_Commercial_Approval_Date__c</fullName>
        <label>Next Commercial Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Knowledge_Workers__c</fullName>
        <description>Number of Knowledge Workers</description>
        <label>No. of Knowledge Workers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>GSPO Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_locations__c</fullName>
        <inlineHelpText>Please list how many key site locations there will be (NOC, DC, Primary Site).</inlineHelpText>
        <label>Expected Number Of Locations</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Balance_Sheet_Treatment__c</fullName>
        <label>Off Balance Sheet Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Capability_1__c</fullName>
        <label>Offer – Capability[1]</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managed Enterprise Networking : LAN/WAN</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Meraki</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : SD-WAN</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Cisco DNA Center</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Virtual Branch</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Optical</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking : IP / MPLS / Optical</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking : Mobility 2.0</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking : Crossworks</fullName>
                </value>
                <value>
                    <fullName>Managed Services Accelerator : Managed Services Accelerator</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Network / Storage</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Compute / Intersight</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Converged / HCI</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : ACI</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : CVIM</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : SAE</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Tetration</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : SAP HANA / Hadoop</fullName>
                </value>
                <value>
                    <fullName>Managed Cloud Automation and Orchestration : NSO</fullName>
                </value>
                <value>
                    <fullName>Managed Cloud Automation and Orchestration : Cloud Center</fullName>
                </value>
                <value>
                    <fullName>Managed Cloud Automation and Orchestration : UCS Software (UCSD)</fullName>
                </value>
                <value>
                    <fullName>Managed Voice : Managed Voice</fullName>
                </value>
                <value>
                    <fullName>Managed Video : Managed Video</fullName>
                </value>
                <value>
                    <fullName>Managed Contact Center : Managed Contact Center</fullName>
                </value>
                <value>
                    <fullName>Managed ATA Essential : Device Management</fullName>
                </value>
                <value>
                    <fullName>Ngena : Ngena</fullName>
                </value>
                <value>
                    <fullName>UCaaS : UCaaS</fullName>
                </value>
                <value>
                    <fullName>CCaaS : CCaaS</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking</fullName>
                </value>
                <value>
                    <fullName>Managed Services Accelerator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>